[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
bytes = "1.3.0" # helps manage buffers
tokio = { version = "1.23.0", features = ["full"] } # async networking
redis-protocol = "6.0.0" # RESP encode and decode pre-use
memchr = "2.7.6" # byte search
tokio-util = { version = "0.7.16", features = [
  "codec",
] } # Decoder/Encoder/Framed Trait
futures = "0.3.28" # SinkExt/StreamExt Trait
itertools = "0.14.0"
clap = { version = "4.5.48", features = ["derive"] }
base64 = "0.22.1"
glob = "0.3.3"
